News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/NXX2_ProofAd_Staging__c.object-meta.xml
<CustomObject>
    <description>This will contain records of proof ads from google cloud storage</description>
    <label>NXX2 ProofAd Staging</label>
    <nameField>
        <label>NXX2 ProofAd Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NXX2 ProofAds Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>