News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/fields/Button_Type__c.field-meta.xml
<CustomField>
    <fullName>Button_Type__c</fullName>
    <description>Button Type</description>
    <label>Button Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>