News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/fields/Creative_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Type__c</fullName>
    <label>Creative Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>