News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/fields/Full_Text__c.field-meta.xml
<CustomField>
    <fullName>Full_Text__c</fullName>
    <label>Full Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>