News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/fields/Has_Merged__c.field-meta.xml
<CustomField>
    <fullName>Has_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used to identify whether a record has been moved to standard object or not.</description>
    <label>Has Merged</label>
    <type>Checkbox</type>
</CustomField>