News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/fields/Image_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Asset_Id__c</fullName>
    <label>Image Asset Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>