News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <length>50</length>
    <type>Text</type>
</CustomField>