News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/fields/Related_ProofAd__c.field-meta.xml
<CustomField>
    <fullName>Related_ProofAd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will link to actual proof ad</description>
    <label>Related ProofAd</label>
    <referenceTo>SocialAd__c</referenceTo>
    <relationshipLabel>NXX2 ProofAds Staging</relationshipLabel>
    <relationshipName>NXX2_ProofAds_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>