News UAT/force-app/main/default/objects/NXX2_ProofAd_Staging__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <formula>MID(  Full_Text__c  , 0, 90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text</label>
    <type>Text</type>
</CustomField>